fixes IE11 homepage textwrap (closes #319)

--- a/datausa/assets/scss/elements/_home.scss
+++ b/datausa/assets/scss/elements/_home.scss
@@ -512,12 +512,14 @@ body.home {
       }
 
       .feed-box-title {
+        @include box();
         font-family: $pathway;
         line-height: 1.3;
         font-weight: 400;
         font-size: 32px;
         letter-spacing: 0.05em;
         line-height: 1;
+        max-width: 80%;
         text-transform: uppercase;
         margin: 0 10%;
         text-align: center;
