--- a/datausa/static/css/site.css
+++ b/datausa/static/css/site.css
@@ -2864,22 +2864,31 @@ body.home {
                 -webkit-transition: all 0.25s;
                 transition: all 0.25s; }
       body.home #feed .feed-box .feed-box-title {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
         font-family: "Pathway Gothic One", sans-serif;
         line-height: 1.3;
         font-weight: 400;
         font-size: 32px;
         letter-spacing: 0.05em;
         line-height: 1;
+        max-width: 80%;
         text-transform: uppercase;
         margin: 0 10%;
         text-align: center;
         z-index: 1; }
-        body.home #feed .feed-box.story.featured .feed-box-subtitle {
-          font-size: 17px;
-          font-weight: 400;
-          letter-spacing: 0.03em;
-          line-height: 1.5;
-          text-transform: none; }
+        body.home #feed .feed-box .feed-box-title:before,
+        body.home #feed .feed-box .feed-box-title:after {
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box; }
+      body.home #feed .feed-box.story.featured .feed-box-subtitle {
+        font-size: 17px;
+        font-weight: 400;
+        letter-spacing: 0.03em;
+        line-height: 1.5;
+        text-transform: none; }
       body.home #feed .feed-box.featured {
         -webkit-box-flex: 2 0 600px;
         -moz-box-flex: 2 0 600px;
